@@ -21,6 +21,9 @@ neutron (2:8.0.0~b1-0ubuntu1) UNRELEASED; urgency=medium
     - d/control: Drop neutron-plugin-mlnx(-agent) binary packages.
     - d/neutron-plugin-mlnx-agent.init.in: File removed.
     - d/neutron-plugin-mlnx(-agent).install: Files removed.
+  * Drop OneConvergence plugin as it has moved out of tree:
+    - d/control: Drop neutron-plugin-oneconvergence(-agent) binary packages.
+    - d/neutron-plugin-oneconvergence-agent.init.in: File removed.
 
  -- Corey Bryant <corey.bryant@canonical.com>  Wed, 16 Dec 2015 12:25:25 -0500
 
